--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "bootstrap": "^5.3.8",
+    "motion": "^12.23.22",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
