--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-router": "^7.9.4",
     "react-scripts": "5.0.1",
     "sass": "^1.93.0",
     "typescript": "^4.9.5",
